samples/_failures_safe/1761073991_9b262d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de0ad4a5.c: In function ‘tokenize’:
./samples/SAFE/__tmp_de0ad4a5.c:165:5: error: expected declaration or statement at end of input
  165 |     }
      |     ^
